Fixed gaps

--- a/api/customer/static/css/customer_home.css
+++ b/api/customer/static/css/customer_home.css
@@ -279,7 +279,7 @@ a:hover {color:#262f48}
 
 .menuItems {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr)); /* Adjust column width as needed */
+    grid-template-columns: repeat(auto-fit, minmax(11rem, 1fr));
     justify-items: center;
 }
 
